--- a/docs/exam1/Makefile
+++ b/docs/exam1/Makefile
@@ -4,7 +4,7 @@ HANDOUTS := $(patsubst %.md,%.md.handout.pdf,$(wildcard *.md))
 all : $(PANDOC) $(HANDOUTS)
 
 %.pandoc : %.md
-	sed 's/-\{3,4\}//g; s/\\\[/\[/g; s/\\\]/\]/g; s/\\\\/\\/g; s/## AE333//g; s/\\_/_/g; s/<br\/>/\n\n/g; s/`\(\$$\+\)/\1/g; s/\(\$$\+\)`/\1/g; /^# /d' $^ > $@
+	sed 's/-\{3,4\}//g; s/\\\[/\[/g; s/\\\]/\]/g; s/\\\\/\\/g; s/## AE333//g; s/\\_/_/g; s/<br\/>/\n\n/g; s/`\(\$$\+\)/\1/g; s/\(\$$\+\)`/\1/g; s/\\$$/\\\\/g; /^# /d' $^ > $@
 
 
 %.pdf : %.pandoc
