fixing some formatting issues (with html page and in general with md -> pdf conversion)

--- a/docs/exam1/Makefile
+++ b/docs/exam1/Makefile
@@ -4,7 +4,10 @@ HANDOUTS := $(patsubst %.md,%.md.handout.pdf,$(wildcard *.md))
 all : $(PANDOC) $(HANDOUTS)
 
 %.pandoc : %.md
-	sed 's/-\{3,4\}//g; s/\\\[/\[/g; s/\\\]/\]/g; s/\\\\/\\/g; s/## AE333//g; s/\\_/_/g; s/<br\/>/\n\n/g; s/`\(\$$\+\)/\1/g; s/\(\$$\+\)`/\1/g; s/\\$$/\\\\/g; /^# /d' $^ > $@
+	sed 's/-\{3,4\}//g; s/\\\[/$$$$/g; s/\\\]/$$$$/g; s/\\\\/\\/g; s/## AE333//g; s/\\_/_/g; s/<br\/>/\n\n/g; s/\\$$/\\\\/g; s/`//g; s/\\(/$$/g; s/\\)/$$/g; /^# /d' $^ > $@
+
+%.tex : %.pandoc
+	pandoc -f markdown $^ -t beamer -o $@ --pdf-engine=xelatex -V handout --standalone
 
 
 %.pdf : %.pandoc
