--- a/docs/exam2/Makefile
+++ b/docs/exam2/Makefile
@@ -7,11 +7,11 @@ all : $(PANDOC) $(HANDOUTS)
 	sed 's/<div class="left">/<div class="columns">\n<div class="column" width="50%">/g; s/<div class="right">/<div class="column" width="50%">/g; s/<\/div class="right">/<\/div>\n<\/div>/g; s/-\{3,4\}//g; s/\\\[/$$$$/g; s/\\\]/$$$$/g; s/\\\\/\\/g; s/## AE333//g; s/\\_/_/g; s/<br\/>/\n\n/g; s/\\$$/\\\\/g; s/`//g; s/\\(/$$/g; s/\\)/$$/g; /^# /d' $^ > $@
 
 %.tex : %.pandoc
-	pandoc -f markdown $^ -t beamer -o $@ --pdf-engine=xelatex -V handout --standalone
+	pandoc -f markdown style.yaml $^ -t beamer -s -o $@ 
 
 
 %.pdf : %.pandoc
-	pandoc -f markdown $^ -t beamer -o $@ --pdf-engine=xelatex -V handout
+	pandoc -f markdown style.yaml $^ -t beamer -o $@
 		
 
 clobber : 
