modified:   exam2/lecture12.md 	new file:   exam2/lecture14.pdf 	new file:   exam2/lecture14.snm 	new file:   exam2/lecture14.tex 	new file:   exam2/lecture14.toc 	new file:   exam2/lecture15.pdf 	new file:   exam2/lecture15.tex 	modified:   exam2/style.yaml 	modified:   index.html updated pdf's and links

--- a/docs/exam2/style.yaml
+++ b/docs/exam2/style.yaml
@@ -17,4 +17,6 @@ header-includes: |
   \makeatother
   \let\Oldincludegraphics\includegraphics
   \renewcommand{\includegraphics}[2][]{\Oldincludegraphics[width=\textwidth,height=0.7\textheight,keepaspectratio]{#2}}
+  \newcommand{\highlight}[1]{%
+  	\colorbox{red!50}{$\displaystyle#1$}}
 ---
